<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.gird_image_search.SettingActivity" >

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageSize"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/color_filter_label" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvColorFilter"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/image_type" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageType"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/site_filter_label" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/image_size_label" />

    <EditText
        android:id="@+id/etImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignLeft="@+id/etColorFilter"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="@string/image_size_default" />

    <EditText
        android:id="@+id/etColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageType"
        android:ems="10"
        android:text="@string/color_filter_default" />

    <EditText
        android:id="@+id/etImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_alignLeft="@+id/etColorFilter"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="@string/image_type_default" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/etImageType"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvImageType"
        android:ems="10"
        android:text="@string/site_filter_default" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickSave"
        android:text="@string/save_label" />

</RelativeLayout>